# fineframework

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  SUMMARY.md  SUMMARY_TEMPLATE.md  _2examples_2graphics_2empty_8cpp-example.html  _2examples_2graphics_2font_8cpp-example.html  annotated.html  annotated_dup.js  apprenderwindow_8h.html  apprenderwindow_8h_source.html  appveyor.yml  bitmapfont_8h.html  bitmapfont_8h.js  bitmapfont_8h_source.html  bmploader_8h.html  bmploader_8h.js  bmploader_8h_source.html  bmpsaver_8h.html  bmpsaver_8h.js  bmpsaver_8h_source.html  book.json  bufferobject_8h.html  bufferobject_8h.js  bufferobject_8h_source.html  bug.html  classes.html  classffw_1_1_app_render_window-members.html  classffw_1_1_app_render_window.html  classffw_1_1_app_window_icon-members.html  classffw_1_1_app_window_icon.html  classffw_1_1_array-members.html  classffw_1_1_array.html  classffw_1_1_array.js  classffw_1_1_bitmap_font-members.html  classffw_1_1_bitmap_font.html  (+1090 more)
.ci/: build.bat  build.sh  deps.bat  deps.sh  gittag.bat  gittag.sh  package.bat  package.sh  test.bat  test.sh
.circleci/: config.yml
doc/: Doxyfile  annotated.html  annotated.md  bootstrap.css  bootstrap.min.css  bug.md  docs.css  doxygen_tmpl.md  ffw.html  ffw.md  ffw_Array.html  ffw_Array.md  ffw_BitmapFont.html  ffw_BitmapFont.md  ffw_BmpLoader.html  ffw_BmpLoader.md  ffw_BmpSaver.html  ffw_BmpSaver.md  ffw_BufferObject.html  ffw_BufferObject.md  ffw_Color.html  ffw_Color.md  ffw_CsvLoader.html  ffw_CsvLoader.md  ffw_DdsLoader.html  ffw_DdsLoader.md  ffw_DdsSaver.html  ffw_DdsSaver.md  ffw_FileInfo.html  ffw_FileInfo.md  ffw_Font.html  ffw_Font.md  ffw_Font_Char.html  ffw_Font_Char.md  ffw_Framebuffer.html  ffw_Framebuffer.md  ffw_FreeTypeLoader.html  ffw_FreeTypeLoader.md  ffw_FreeTypeLoader_CharData.html  ffw_FreeTypeLoader_CharData.md  (+462 more)
docs/: README.md  SUMMARY.md  SUMMARY_TEMPLATE.md  download.md  faq.md
doxygen/: annotated.html  annotated.md  (+430 more)
examples/data/: CMakeLists.txt  csv_advanced.cpp  csv_simple.cpp  file.csv  json_advanced.cpp  json_simple.cpp  xml_advanced.cpp  xml_simple.cpp
examples/graphics/: .goutputstream-9SHWOY  CMakeLists.txt  bitmapfont.cpp  cube.cpp  empty.cpp  font.cpp  grid-rgb8.raw  shapes.cpp  texturesubsection.cpp  tree.cpp  truetypefont.cpp  ubuntu-mono-rgba8.raw  wordbreak.cpp
examples/gui/: CMakeLists.txt  guialign.cpp  guiallwidgets.cpp  openglgui.cpp  owl.raw
examples/media/: 3dmonkey.cpp  CMakeLists.txt  cubemap.cpp  monkeyshader.frag  monkeyshader.vert  showimage.cpp
source/data/: CMakeLists.txt  csvfile.cpp  helpers.cpp  jsonfile.cpp  jsonreader.cpp  jsonwriter.cpp  xmlfile.cpp  xmlreader.cpp  xmlwriter.cpp
source/graphics/: CMakeLists.txt  apprenderwindow.cpp  bitmapfont.cpp  bufferobject.cpp  extensions.cpp  font.cpp  framebuffer.cpp  freetypeloader.cpp  glfwrenderwindow.cpp  graphics.cpp  monitors.cpp  nanovggl2.cpp  nanovggl3.cpp  nanovggles2.cpp  nanovggles3.cpp  renderbuffer.cpp  renderbuffer2d.cpp  renderbuffer2dms.cpp  rendercollection.cpp  rendercollectiongl1.cpp  rendercollectiongl3.cpp  rendercontext.cpp  renderextensionsgl.cpp  shader.cpp  texture.cpp  texture1d.cpp  texture1darray.cpp  texture2d.cpp  texture2darray.cpp  texture2darrayms.cpp  texture2dms.cpp  texture3d.cpp  texturecubemap.cpp  truetypefont.cpp
source/gui/: CMakeLists.txt  guibackend.cpp  guibox.cpp  guibutton.cpp  guibuttontoggle.cpp  guicheckbox.cpp  guiimageviewer.cpp  guilabel.cpp  guilayout.cpp  guilist.cpp  guiprogressbar.cpp  guiprogresscircle.cpp  guiradio.cpp  guirenderable.cpp  guirichtext.cpp  guiscrollable.cpp  guiscrollbar.cpp  guislider.cpp  guiswitch.cpp  guisymbol.cpp  guitab.cpp  guitext.cpp  guitextedit.cpp  guitextwrapper.cpp  guitheme.cpp  guitheme_bootstrap.cpp  guitheme_flatdark.cpp  guitheme_flatlight.cpp  guitheme_modernflat.cpp  guitheme_simpledark.cpp  guitheme_simplelight.cpp  guitheme_windows.cpp  guiwidget.cpp  guiwindow.cpp
source/math/: CMakeLists.txt  empty.cpp  imagebuffer.cpp  mvp.cpp  stringmath.cpp
source/media/: CMakeLists.txt  bmploader.cpp  bmpsaver.cpp  ddsheader.h  ddsloader.cpp  ddssaver.cpp  imagebuffer.cpp  imageloader.cpp  imagesaver.cpp  imageutils.cpp  jpgloader.cpp  jpgsaver.cpp  objloader.cpp  pbmloader.cpp  pbmsaver.cpp  pngloader.cpp  pngsaver.cpp  tgaloader.cpp  tgasaver.cpp  tifloader.cpp  tifsaver.cpp
tests/data/: CMakeLists.txt  data.cpp  data_csv.cpp  data_json.cpp  data_xml.cpp  sample.csv
tests/graphics/: CMakeLists.txt  graphics.cpp
tests/gui/: CMakeLists.txt  align.cpp  borders.cpp  buttons.cpp  checkboxes.cpp  gui.cpp  gui_align.cpp  gui_events.cpp  gui_layout.cpp  gui_textwrapper.cpp  gui_widgets.cpp  lists.cpp  nullrenderer.h  nullstyles.h  orientation.cpp  progressbars.cpp  progresscircles.cpp  radios.cpp  scrollables.cpp  scrollbars.cpp  sliders.cpp  switches.cpp  tabs.cpp  textedits.cpp
tests/math/: CMakeLists.txt  math.cpp  math_any.cpp  math_fileinfo.cpp  math_functions.cpp  math_imagebuffer.cpp  math_promise.cpp  math_promise_extra.cpp  math_ringbuffer.cpp  math_stringmath.cpp  math_tests.cpp  math_textwrapper.cpp  math_threads.cpp  math_tokenizer.cpp  math_unicode.cpp  math_var.cpp  math_vec.cpp  math_vectors.cpp
tests/media/: CMakeLists.txt  cube.mtl  media.cpp  media_audio.cpp  media_images.cpp  media_obj.cpp  plane.mtl  planes.mtl
tests/media/imgs/: ALPHA_8.dds  BITMAP_1.raw  GRAYSCALE_16.pbm  GRAYSCALE_16.raw  GRAYSCALE_16.tif  GRAYSCALE_16F.dds  GRAYSCALE_16F.raw  GRAYSCALE_32.raw  GRAYSCALE_32.tif  GRAYSCALE_32F.dds  GRAYSCALE_32F.pbm  GRAYSCALE_4.raw  GRAYSCALE_8.dds  GRAYSCALE_8.pbm  GRAYSCALE_8.raw  GRAYSCALE_8.tga  GRAYSCALE_8.tif  GRAYSCALE_ALPHA_16.raw  GRAYSCALE_ALPHA_16.tif  GRAYSCALE_ALPHA_32.raw  GRAYSCALE_ALPHA_32.tif  GRAYSCALE_ALPHA_8.dds  GRAYSCALE_ALPHA_8.raw  GRAYSCALE_ALPHA_8.tga  GRAYSCALE_ALPHA_8.tif  RED_GREEN_RGTC2.dds  RED_GREEN_RGTC2.raw  RED_RGTC1.dds  RED_RGTC1.raw  RGB_161616.pbm  RGB_161616.raw  RGB_161616.tif  RGB_323232.pbm  RGB_323232.tif  RGB_323232F.raw  RGB_888.dds  RGB_888.pbm  RGB_888.raw  RGB_888.tga  RGB_888.tif  (+26 more)
(+880 files in other folders)
