cmake_minimum_required(VERSION 3.0)
project (fineframework)

LIST(APPEND CMAKE_PROGRAM_PATH CMAKE_EXTRA_PATH)

message(STATUS "CMAKE_LIBRARY_PATH='${CMAKE_LIBRARY_PATH}'")

if(MSVC)
else()
	include(CheckCXXCompilerFlag)
	CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
	if(COMPILER_SUPPORTS_CXX11)
		message(STATUS "${COMPILER_SUPPORTS_CXX11}")
	else(COMPILER_SUPPORTS_CXX11)
		message(FATAL_ERROR "${COMPILER_SUPPORTS_CXX11}")
	endif(COMPILER_SUPPORTS_CXX11)

	if (CMAKE_VERSION VERSION_LESS "3.1")
	  if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
		set (CMAKE_CXX_FLAGS "--std=gnu++11 ${CMAKE_CXX_FLAGS}")
	  endif ()
	else ()
	  set (CMAKE_CXX_STANDARD 11)
	endif ()
	set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Select build type")
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "RelWithDebInfo" "MinSizeRel")
endif()

if(APPLE)
  include_directories(/usr/local/include)
  link_directories(/usr/local/lib)
endif()
  
if(UNIX OR APPLE)
  option(PREFER_STATIC_OVER_DYNAMIC "Prefer static versions of the dependencies over dynamic" OFF)
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath -Wl,$ORIGIN")
  
  if(PREFER_STATIC_OVER_DYNAMIC)
    find_library(GLFW3_LIBRARY NAMES libglfw3.a libglfw3_static.a glfw3 glfw HINTS /usr/local/lib)
    find_library(FREETYPE_LIBRARY NAMES libfreetype.a libfreetype_static.a freetype HINTS /usr/local/lib)
    find_library(PNG_LIBRARY NAMES libpng.a libpng_static.a png HINTS /usr/local/lib)
    find_library(JPEG_LIBRARY NAMES libjpeg.a libjpeg_static.a jpeg HINTS /usr/local/lib)
    find_library(TIFF_LIBRARY NAMES libtiff.a libtiff_static.a tiff HINTS /usr/local/lib)
    find_library(ZLIB_LIBRARY NAMES libz.a libz_static.a z HINTS /usr/local/lib)
  else(PREFER_STATIC_OVER_DYNAMIC)
    find_library(GLFW3_LIBRARY glfw3 glfw HINTS /usr/local/lib)
    find_library(FREETYPE_LIBRARY freetype HINTS /usr/local/lib)
    find_library(PNG_LIBRARY NAMES png HINTS /usr/local/lib)
    find_library(JPEG_LIBRARY NAMES jpeg HINTS /usr/local/lib)
    find_library(TIFF_LIBRARY NAMES tiff HINTS /usr/local/lib)
    find_library(ZLIB_LIBRARY NAMES z HINTS /usr/local/lib)
  endif(PREFER_STATIC_OVER_DYNAMIC)
  
  message(STATUS "glfw3 library path: ${GLFW3_LIBRARY}")
  message(STATUS "freetype library path: ${FREETYPE_LIBRARY}")
  message(STATUS "png library path: ${PNG_LIBRARY}")
  message(STATUS "jpeg library path: ${JPEG_LIBRARY}")
  message(STATUS "tiff library path: ${TIFF_LIBRARY}")
  message(STATUS "zlib library path: ${ZLIB_LIBRARY}")
endif()

if(NOT MSVC)
  set(THREADS_PREFER_PTHREAD_FLAG ON)
  find_package(Threads REQUIRED)
endif()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_DEBUG_POSTFIX _d CACHE STRING "Postfix added to debug version of the library")

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

option(BUILD_SHARED_LIBS "Build Shared Libraries" ON)
option(BUILD_MODULE_MATH "Build math module (Must stay ON!)" ON)
option(BUILD_MODULE_GRAPHICS "Build OpenGL graphics module" ON)
option(BUILD_MODULE_DATA "Build Data module" ON)
option(BUILD_MODULE_GUI "Build GUI module" ON)
option(BUILD_MODULE_MEDIA "Build Media module" ON)
option(BUILD_EXAMPLES "Build examples" ON)
option(BUILD_TESTS "Build tests" ON)
option(BUILD_INSTALL "Install library" ON)

if(UNIX)
  if(NOT APPLE)
    option(STATIC_STDLIB "Link against static stdlib" ON)
  else()
    set(STATIC_STDLIB OFF)
  endif()
else()
  set(STATIC_STDLIB OFF)
endif()

if(STATIC_STDLIB)
  message(STATUS "Compiling with statically linked libgcc and libstdc++")
endif(STATIC_STDLIB)

if(APPLE)
  find_library(OPENGL_LIBRARY OpenGL)
  find_library(COCOA_LIBRARY Cocoa)
  find_library(IOKIT_LIBRARY IOKit)
  find_library(COREVIDEO_LIBRARY CoreVideo)
endif()

if(BUILD_TESTS)
  enable_testing ()
endif()

function(add_modulesubdirs MODULE)
  add_subdirectory(source/${MODULE})
  if(BUILD_EXAMPLES)
    add_subdirectory(examples/${MODULE})
  endif()
  if(BUILD_TESTS)
    add_subdirectory(tests/${MODULE})
  endif()
endfunction(add_modulesubdirs)

if(BUILD_MODULE_MATH)
  add_modulesubdirs(math)
endif()

if(BUILD_MODULE_GRAPHICS)
  add_modulesubdirs(graphics)
endif()

if(BUILD_MODULE_DATA)
  add_modulesubdirs(data)
endif()

if(BUILD_MODULE_GUI)
  add_modulesubdirs(gui)
endif()

if(BUILD_MODULE_MEDIA)
  add_modulesubdirs(media)
endif()

if (BUILD_INSTALL)
  install(DIRECTORY include/ffw DESTINATION include)
endif()